Rename osc::ShaderType --> osc::ShaderPropertyType

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -88,7 +88,7 @@ add_library(oscar STATIC
     Graphics/ShaderCache.cpp
     Graphics/ShaderCache.hpp
     Graphics/ShaderLocations.hpp
-    Graphics/ShaderType.hpp
+    Graphics/ShaderPropertyType.hpp
     Graphics/Texture2D.hpp
     Graphics/TextureChannelFormat.hpp
     Graphics/TextureDimensionality.hpp
