Integrate noop ImGui_ImplOscarGfx functions into osc::App

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -18,17 +18,18 @@ find_package(tomlplusplus REQUIRED CONFIG)
 find_package(unordered_dense REQUIRED CONFIG)
 
 add_library(oscar STATIC
-
+    Bindings/Gl.cpp
+    Bindings/Gl.hpp
+    Bindings/GlGlm.hpp
     Bindings/GlmHelpers.cpp
     Bindings/GlmHelpers.hpp
     Bindings/ImGuiHelpers.cpp
     Bindings/ImGuiHelpers.hpp
     Bindings/ImGuizmoHelpers.cpp
     Bindings/ImGuizmoHelpers.hpp
+    Bindings/imgui_impl_oscargfx.cpp
+    Bindings/imgui_impl_oscargfx.hpp
     Bindings/SDL2Helpers.hpp
-    Bindings/Gl.cpp
-    Bindings/Gl.hpp
-    Bindings/GlGlm.hpp
 
     Formats/CSV.hpp
     Formats/CSV.cpp
