--- a/tests/testoscar_document/CMakeLists.txt
+++ b/tests/testoscar_document/CMakeLists.txt
@@ -2,15 +2,14 @@ include(GoogleTest)
 find_package(GTest REQUIRED CONFIG)
 
 add_executable(testoscar_document
-    TestNode.cpp
     TestNodePath.cpp
     TestPropertyDescription.cpp
-    TestPropertyDescriptions.cpp
+    TestStringName.cpp
     TestVariant.cpp
     TestVariantType.cpp
 
     testoscar_document.cpp  # entrypoint
- )
+)
 
 target_link_libraries(testoscar_document PUBLIC
     # set compiler options
