Minor cleanups, stub out Object in CMakeLists and tests

--- a/src/oscar_document/CMakeLists.txt
+++ b/src/oscar_document/CMakeLists.txt
@@ -3,6 +3,8 @@ add_library(oscar_document STATIC
     PropertyTableEntry.hpp
     NodePath.cpp
     NodePath.hpp
+    Object.cpp
+    Object.hpp
     PropertyTable.cpp
     PropertyTable.hpp
     StringName.cpp
