Implement Property description name validation and fix hashing

--- a/src/oscar_document/CMakeLists.txt
+++ b/src/oscar_document/CMakeLists.txt
@@ -5,6 +5,8 @@ add_library(oscar_document STATIC
     NodePath.hpp
     Object.cpp
     Object.hpp
+    PropertyDescription.cpp
+    PropertyDescription.hpp
     PropertyTable.cpp
     PropertyTable.hpp
     StringName.cpp
