Separate PopupAPI from EditorAPI (#800)

--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -106,6 +106,7 @@ add_library(OpenSimCreator STATIC
 
     UI/Middleware/EditorAPI.hpp
     UI/Middleware/MainUIStateAPI.hpp
+    UI/Middleware/PopupAPI.hpp
     UI/Middleware/SimulatorUIAPI.hpp
 
     UI/Panels/CoordinateEditorPanel.cpp
