Add (failing) automated test that tries to show popup for all possible components (#800)

--- a/tests/TestOpenSimCreator/CMakeLists.txt
+++ b/tests/TestOpenSimCreator/CMakeLists.txt
@@ -7,6 +7,7 @@ add_executable(TestOpenSimCreator
     Model/TestUndoableModelStatePair.cpp
     Registry/TestStaticComponentRegistries.cpp
     Simulation/TestForwardDynamicSimulation.cpp
+    UI/Widgets/TestAddComponentPopup.cpp
     Utils/TestOpenSimHelpers.cpp
     Utils/TestShapeFitters.cpp
     Utils/TestUndoableModelActions.cpp
