Update github action to use llvm@15 rather than apple clang

--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -55,8 +55,8 @@ jobs:
         if-no-files-found: error
 
   macCatalina:
-    name: Build on Mac (Monterey)
-    runs-on: macos-12
+    name: Build on Mac (Catalina)
+    runs-on: macos-11
     steps:
 
     - uses: actions/checkout@v2
@@ -67,6 +67,8 @@ jobs:
       run: |
         cd $GITHUB_WORKSPACE
         export OSC_BUILD_CONCURRENCY=$(sysctl -n hw.physicalcpu)
+        export CC=$(brew --prefix llvm@15)/bin/clang
+        export CXX=$(brew --prefix llvm@15)/bin/clang++
         ./scripts/build_mac.sh
 
     - uses: actions/upload-artifact@v2
