Change CI Linux compiler from gcc (v9) to clang (v10)

--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -40,6 +40,8 @@ jobs:
         cd $GITHUB_WORKSPACE/osc
         sudo apt-get install xvfb  # virtual desktop, for tests
         export OSC_BUILD_CONCURRENCY=$(nproc)
+        export CC=clang
+        export CXX=clang++
         xvfb-run ./scripts/build_debian-buster.sh
 
     - uses: actions/upload-artifact@v2
