Revert "Rollout C++20 <bit> operations"
This reverts commit 4f1b626ef9214fbe635e19d0cc3745120d815149.

--- a/tests/testoscar/CMakeLists.txt
+++ b/tests/testoscar/CMakeLists.txt
@@ -24,6 +24,7 @@ add_executable(testoscar
     Platform/TestAppSettingValueType.cpp
 
     Utils/TestCStringView.cpp
+    Utils/TestCpp20Shims.cpp
     Utils/TestFileChangePoller.cpp
     Utils/TestStringHelpers.cpp
 
