--- a/tests/testoscar/CMakeLists.txt
+++ b/tests/testoscar/CMakeLists.txt
@@ -2,12 +2,11 @@ include(GoogleTest)
 find_package(GTest REQUIRED CONFIG)
 
 add_executable(testoscar
+    DOM/TestClass.cpp
     DOM/TestNode.cpp
     DOM/TestNodePath.cpp
     DOM/TestObject.cpp
     DOM/TestPropertyDescription.cpp
-    DOM/TestPropertyTable.cpp
-    DOM/TestPropertyTableEntry.cpp
 
     Formats/TestCSV.cpp
     Formats/TestDAE.cpp
@@ -39,7 +38,7 @@ add_executable(testoscar
     Utils/TestVariantType.cpp
 
     testoscar.cpp  # entry point
-)
+ "DOM/TestClass.cpp")
 
 
 configure_file(
