Separated BVH to be associatively stored in SceneCache

--- a/tests/testoscar/CMakeLists.txt
+++ b/tests/testoscar/CMakeLists.txt
@@ -23,7 +23,7 @@ add_executable(testoscar
 
     Platform/TestAppSettingValueType.cpp
 
-    Scene/TestSceneMesh.cpp
+    Scene/TestSceneCache.cpp
 
     Shims/Cpp20/TestBit.cpp
 
