Rollout osc::to_underlying shim for std::to_underlying (C++23)

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -164,6 +164,7 @@ add_library(oscar STATIC
     Shims/Cpp20/bit.hpp
     Shims/Cpp20/stop_token.hpp
     Shims/Cpp20/thread.hpp
+    Shims/Cpp23/utility.hpp
 
     UI/Panels/LogViewerPanel.cpp
     UI/Panels/LogViewerPanel.hpp
