Refactor MeshEl into separate hpp+cpp files (#802)

--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -57,14 +57,17 @@ add_library(OpenSimCreator STATIC
 
     ModelGraph/CrossrefDescriptor.hpp
     ModelGraph/CrossrefDirection.hpp
+    ModelGraph/GroundEl.hpp
     ModelGraph/ISceneElLookup.hpp
+    ModelGraph/MeshEl.cpp
+    ModelGraph/MeshEl.hpp
     ModelGraph/ModelGraphIDs.cpp
     ModelGraph/ModelGraphIDs.hpp
     ModelGraph/ModelGraphStrings.hpp
     ModelGraph/SceneEl.cpp
     ModelGraph/SceneEl.hpp
-    ModelGraph/SceneElCRTP.hpp
     ModelGraph/SceneElClass.hpp
+    ModelGraph/SceneElCRTP.hpp
     ModelGraph/SceneElFlags.hpp
     ModelGraph/SceneElVariant.hpp
 
@@ -238,7 +241,7 @@ add_library(OpenSimCreator STATIC
     Utils/TPS3D.hpp
     Utils/UndoableModelActions.cpp
     Utils/UndoableModelActions.hpp
- "ModelGraph/ModelGraphIDs.cpp" "ModelGraph/SceneEl.cpp")
+ "ModelGraph/ModelGraphIDs.cpp" "ModelGraph/SceneEl.cpp" "ModelGraph/MeshEl.cpp")
 
 # OpenSimCreatorConfig.hpp
 #
