Refactor EdgeEl into its own hpp+cpp files (#802)

--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -59,6 +59,8 @@ add_library(OpenSimCreator STATIC
     ModelGraph/BodyEl.hpp
     ModelGraph/CrossrefDescriptor.hpp
     ModelGraph/CrossrefDirection.hpp
+    ModelGraph/EdgeEl.cpp
+    ModelGraph/EdgeEl.hpp
     ModelGraph/GroundEl.hpp
     ModelGraph/ISceneElLookup.hpp
     ModelGraph/JointEl.cpp
