Refactor scene el helper functions into seperate SceneElHelpers hpp+cpp (#802)

--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -75,6 +75,8 @@ add_library(OpenSimCreator STATIC
     ModelGraph/SceneElClass.hpp
     ModelGraph/SceneElCRTP.hpp
     ModelGraph/SceneElFlags.hpp
+    ModelGraph/SceneElHelpers.cpp
+    ModelGraph/SceneElHelpers.hpp
     ModelGraph/SceneElVariant.hpp
     ModelGraph/StationEl.cpp
     ModelGraph/StationEl.hpp
