Refactor meshimporter's MeshLoader into seperate hpp+cpp (#802)

--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -181,6 +181,8 @@ add_library(OpenSimCreator STATIC
     UI/Tabs/Experimental/TPS2DTab.hpp
     UI/Tabs/MeshImporter/MeshImporterTab.cpp
     UI/Tabs/MeshImporter/MeshImporterTab.hpp
+    UI/Tabs/MeshImporter/MeshLoader.cpp
+    UI/Tabs/MeshImporter/MeshLoader.hpp
     UI/Tabs/FrameDefinitionTab.cpp
     UI/Tabs/FrameDefinitionTab.hpp
     UI/Tabs/LoadingTab.cpp
