Revert "Temporarily remove DOM/ classes so that docs can be partially merged into main"
This reverts commit d38aa24f0128cdbd961384ffe3a7c3e34d6b4d5b.

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -26,6 +26,16 @@ add_library(oscar STATIC
     Bindings/ImGuizmoHelpers.hpp
     Bindings/SDL2Helpers.hpp
 
+    DOM/Class.cpp
+    DOM/Class.hpp
+    DOM/Node.hpp
+    DOM/NodePath.cpp
+    DOM/NodePath.hpp
+    DOM/Object.cpp
+    DOM/Object.hpp
+    DOM/PropertyInfo.cpp
+    DOM/PropertyInfo.hpp
+
     Formats/CSV.hpp
     Formats/CSV.cpp
     Formats/DAE.hpp
